@@ -1,3 +1,8 @@
+ags (2.1.77)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed potential SIGSEGV in ags_simple_file.c
+
 ags (2.1.76)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
